# bk-imp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.MD  README.md  get_amazon_reviews.sh  profiling_results.pstats  pyproject.toml  requirements.txt
.dvc/: config
algorithm/: binary-tree.ipynb  binary-tree.py  stores-generator.ipynb
algorithm/a2/: CONCLUSION.md  binary-tree.ipynb  binary-tree.py.lprof  red-black-tree.ipynb  red-black-tree.py  red-black-tree.py.lprof  stores.pkl
algorithm/a3/: ILP.ipynb  ILP.py  MILP.ipynb  direct-distances.ipynb  map.html  osm.ipynb  stores-generator.ipynb  stores.pkl  warehouses.pkl
bigdata-mini-project/: diagram.py  get_amazon_reviews.sh
bigdata-mini-project/notebook/: Graph-Amazon-project.ipynb  data-preparation.ipynb  graph-amazon-project-spark.ipynb  graph-amazon-project.ipynb  model-and-evaluation.ipynb  neo4j.ipynb  preprocessing.ipynb  product_features.ipynb  torch_geometric.ipynb
de-mini-project/: tweet_collector.py
dl/report/: report.typ
is/: ablation.py  docker-compose.yaml
is/app/: Dockerfile  Makefile  docker-compose.yaml  main.py
is/back-end/: Dockerfile  main.py
is/front-end/: Dockerfile  dataset_page.py  main.py  model_page.py  optimization_page.py
is/notebook/: autofe.ipynb  kmeans.ipynb  preventing_customer_churn.ipynb  preventing_customer_churn_by_optimizing_incentives.ipynb
is/report/: report.typ
math/assignment/: community_detection_recsys.ipynb  evaluation.ipynb  lpa.ipynb  references.bib  report.tex
math/hw/: homework_1.tex  homework_2.ipynb  homework_2.tex  homework_3.tex
math/src/: map_generator.py  map_plot.py
mini_project/: README.md  tweet_collector.py  tweet_openml.py
ml/: Kmeans_HAC_assignment.ipynb  explore_nyc_data.ipynb  model_pipeline.ipynb  nyc_taxi_data.ipynb
ml/nyc-dataset/: download_raw_data.sh
ml/report/: report.typ  template.typ
ml/service/: Dockerfile  README.md
nlp/: .env.sample  model-openai+cnn.ipynb  model-openai+crnn.ipynb  model-openai+lstm-cnn.ipynb  model-openai+lstm.ipynb  model-word2vec+cnn.ipynb  model-word2vec+crnn.ipynb  model-word2vec+lstm-cnn.ipynb  model-word2vec+lstm.ipynb  results.ipynb
thesis/fse/: appendix.tex  hyphenation.py
thesis/project_2/: main.tex  presentation.tex  references.bib
thesis/report/: main.tex  references.bib  reffix.py
thesis/self-debug/: dev.py
thesis/seminar/: main.tex  references.bib
thesis/slides/: main.tex  main.vrb  plot.py  references.bib
tts-lab/: README.md  data_generator.py
tts-lab/crawler/: README.md  archive.py
tts-lab/phoneme-segmentation/: acoustic_features.py  constants.py  dataset.py  main.py  post_processing.py  training.py
tts-lab/tone-converter/: 0001_m.wav.dvc  male_voice.mp3.dvc  optimize_praat_params.ipynb  python-praat.ipynb
voh/: Dockerfile  Pipfile  README.md  docker_run.sh  fetch_hls_stream.py  install.sh  join_audio_files.py
(+151 files in other folders)
