[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 79

[tool.poetry]
authors = ["Tăng Quốc Thái - <tqthai.sdh222@hcmut.edu.vn>"]
description = "BK-IMP repo"
name = "bk-imp"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^2.1.2"
python = "3.10.10"
scikit-learn = "^1.3.2"
xgboost = "^2.0.1"

[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gs"], version = "^2.58.2"}
jupyterlab = "==2.*"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
pre-commit = "^2.20.0"
toml-sort = "^0.23.0"

[tool.poetry.group.is.dependencies]
fastapi = "^0.104.1"
gekko = "^1.0.6"
uvicorn = "^0.24.0"
