[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 79

[tool.poetry]
authors = ["Tăng Quốc Thái - <tqthai.sdh222@hcmut.edu.vn>"]
description = "BK-IMP repo"
name = "bk-imp"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gdown = "^5.1.0"
pandas = "^1.0"
praatio = "^6.1.0"
python = "~3.10"
python-dotenv = "^1.0.1"
scikit-learn = "^1.3.2"
xgboost = "^1.7"

[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gs"], version = "^2.58.2"}
jupyterlab = "^2.0"
nbconvert = "^7.11.0"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
papermill = "^2.5.0"
poetry-plugin-export = "^1.6.0"
pre-commit = "^2.20.0"
toml-sort = "^0.23.0"

[tool.poetry.group.is.dependencies]
fastapi = "^0.104.1"
featurewiz = "^0.3.2"
gekko = "^1.0.6"
python-dotenv = "^1.0.0"
streamlit = "^1.29.0"
uvicorn = "^0.24.0"

[tool.poetry.group.tts.dependencies]
librosa = "^0.10.1"
lightgbm = "^4.1.0"
praat-parselmouth = "^0.4.3"

[tool.poetry.group.math.dependencies]
geopy = "^2.4.0"
osmnx = "^1.7.1"

[tool.poetry.group.thesis.dependencies]
langchain = "^0.1.7"
langchain-openai = "^0.0.6"

[tool.poetry.group.nlp.dependencies]
gensim = "^4.3.2"
openai = "^1.16.2"
pyvi = "^0.1.1"
scipy = "1.10.1"
tensorflow = "^2.16.1"
